update description, fix site title alignment

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1692,6 +1692,7 @@ $sidebar-display: "sidebar-display";
         a {
           font-size: 1.7rem;
           letter-spacing: 1px;
+          margin-left: 3.5rem;
         }
       }
 
